--- a/css/main.css
+++ b/css/main.css
@@ -181,14 +181,17 @@ section {
 section .wrapper {
   display: inline-block;
   vertical-align: text-top;
-  margin: 0.5em 0.5em 1em 0.5em;
+  margin: -1.5em 0.5em 1em 0.5em;
   padding: 0.5em;
 }
 
 
 section .box {
   padding: 2em;
-  border: 1px solid #999999;
+  border-left: 1px solid #999999;
+  border-bottom: 1px solid #999999;
+  border-right: 1px solid #999999;
+
 }
 
 section code {
@@ -616,7 +619,6 @@ section.cart-summary {
   background: url("../img/Impresso.jpg") no-repeat;
   background-size:cover;
   margin: 0;
-  padding: 7em 5em 5em 5em;
   max-width: 100%;
   height: 50em;
   }
@@ -631,6 +633,11 @@ section.cart-summary {
 
 #about-impresso p{
   text-align: left;
+}
+
+.events{
+  background-color: #CCC;
+  padding-bottom: 1em;
 }
 
 
@@ -661,6 +668,7 @@ section.cart-summary {
 
 .event-tasting{
   background: url("../img/Tasting.jpg");
+  background-size: cover;
   padding: 10em;
   max-width: 100%;
   color: white;
@@ -675,6 +683,11 @@ section.cart-summary {
 }
 
 #site-map {
+  text-align: left;
+}
+
+#social-media{
+
   text-align: left;
 }
 
@@ -739,13 +752,26 @@ section.cart-summary {
 }
 
 .espresso-feature-bg{
-  background: url("../img/espresso-shot.jpeg");
+  background: url("../img/espresso-shot.jpeg") no-repeat;
+  background-size:cover;
   margin: 0;
-  padding: 10em;
+  padding: 6em 5em 5em 10em;
   max-width: 100%;
-  color: white;
-  background-position: 80% 60%;
+  height: 37em;
 }
+
+
+#about-espresso{
+    position: absolute;
+    top: 30%;
+    color: #fff;
+}
+
+
+#about-espresso p{
+  text-align: left;
+}
+
 
 .mokapot-feature-bg{
   background: url("../img/mokapot-feature.jpg");
